--- a/locale/en/foundation/tsc/minutes/2014-12-10.md
+++ b/locale/en/foundation/tsc/minutes/2014-12-10.md
@@ -21,7 +21,7 @@ problems for users who link node with a dynamic shared libuv.
 
 ### 0.11.15
 
-Nobody had any blocker for the next developement release, whose release is
+Nobody had any blocker for the next development release, whose release is
 also scheduled to happen in the next few days. The priority is given to
 releasing 0.10.34 first though.
 
