--- a/locale/en/foundation/tsc/minutes/2015-01-22.md
+++ b/locale/en/foundation/tsc/minutes/2015-01-22.md
@@ -80,7 +80,7 @@ Michael agreed that the target for such a port would likely be 0.14.0. Michael
 mentioned that ideally the process of upstreaming changes to V8 would be done
 by that time. If not, there has been discussions recently between TJ and Chris
 on refactoring the dependencies management so that maintaining floating
-patches (also for other dependencies liek c-ares and OpenSSL) would be easier.
+patches (also for other dependencies like c-ares and OpenSSL) would be easier.
 
 ### 0.10.36 release
 
