--- a/locale/en/foundation/tsc/minutes/2015-02-09.md
+++ b/locale/en/foundation/tsc/minutes/2015-02-09.md
@@ -51,7 +51,7 @@ abstraction layer.
 Alexis, TJ: that would become the blessed V8/JSruntime API for binary add-ons.
 
 TJ: C++ ABI has worked so far, but probably because we've been lucky. So C API
-makes more sense and would be more robust accross different platforms.
+makes more sense and would be more robust across different platforms.
 
 Alexis Campailla: What about nan?
 
@@ -145,7 +145,7 @@ any GitHub pull request.
 
 ## Alexis Campailla: Running benchmarks for Windows.
 
-Julien: Tracking benchmarks results accross every commit would be very useful
+Julien: Tracking benchmarks results across every commit would be very useful
 to identify the causes of performance regressions.
 
 James Snell, Michael Dawson: IBM started to run benchmarks for downstream
