--- a/locale/en/foundation/tsc/minutes/2015-03-19.md
+++ b/locale/en/foundation/tsc/minutes/2015-03-19.md
@@ -79,7 +79,7 @@ agreed the existing fix is appropriate and we should just backport it to
 
 Julien is talking with some groups about doing some pre-release testing on
 release candidates. TJ suggested we should ask for volunteers on the blog or
-twitter. It will need to be a full blown release candiate due to gyp
+twitter. It will need to be a full blown release candidate due to gyp
 dependencies etc. Julien will write up a proposal.
 
 #### Tooling around issues/PR triaging
