--- a/locale/en/foundation/tsc/minutes/2015-04-24.md
+++ b/locale/en/foundation/tsc/minutes/2015-04-24.md
@@ -21,7 +21,7 @@ layout: foundation-tsc-minutes-post.hbs
 Discussion around removal of RC4 to address Bar Mitzva attack.  Progress
 being made, need to update to clarify precedence of command line 
 options (https://github.com/joyent/node/pull/19148), update code/tests to 
-match this descripton (James), finalize release notes (Julien with input from all) 
+match this description (James), finalize release notes (Julien with input from all) 
 and then do one final review before release (all).   Important that we add
 tests to make sure merge with 0.12.X can be easily validated.
 
