--- a/locale/en/foundation/tsc/minutes/2015-04-30.md
+++ b/locale/en/foundation/tsc/minutes/2015-04-30.md
@@ -75,9 +75,9 @@ James: Initial convergance plan: https://github.com/jasnell/dev-policy/pull/66.
 
 James: nothing set in stone. Current plan:
 
-* io.js organization transfered to nodejs organization. Will keep everything
+* io.js organization transferred to nodejs organization. Will keep everything
 they've already setup.
-* joyent/node and other joyent/node-related repos will also be transfered to
+* joyent/node and other joyent/node-related repos will also be transferred to
 this organization.
 * Both joyent/node and iojs/iojs repos would be under the foundation.
 * For the converged repo, a fork of iojs repo would be created.
