--- a/locale/en/site.json
+++ b/locale/en/site.json
@@ -162,10 +162,10 @@
   },
   "banners": {
     "index": {
-      "startDate": "2021-08-25T16:00:00.000Z",
-      "endDate": "2021-09-08T16:00:00.000Z",
-      "text": "New security releases now available for 14.x, and 12.x release lines",
-      "link": "blog/vulnerability/aug-2021-security-releases2/"
+      "startDate": "2021-10-05T16:00:00.000Z",
+      "endDate": "2021-11-05T16:00:00.000Z",
+      "text": "New security releases to be made available October 12th, 2021",
+      "link": "blog/vulnerability/oct-2021-security-releases/"
     },
     "blacklivesmatter": {
       "visible": false,
